--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.clublaribera_app_v2">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,9 +12,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ClubLaRibera_App_v2">
+        <activity android:name=".ui.forgotpass.ForgotPassActivity"
+            android:theme="@style/Theme.ClubLaRibera_App_v2.NoActionBar" />
+        <activity android:name=".ui.registro.RegistroActivity"
+            android:theme="@style/Theme.ClubLaRibera_App_v2.NoActionBar" />
+        <activity android:name=".ui.login.LoginActivity"
+            android:theme="@style/Theme.ClubLaRibera_App_v2.NoActionBar"/>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/Theme.ClubLaRibera_App_v2.NoActionBar" />
+        <activity
+            android:name=".SplashScreenActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.ClubLaRibera_App_v2.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
